<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">招领启事</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_lost_name">失物招领</string>
    <string name="main_found_name">寻物启事</string>
    <string name="main_personal_name">个人信息</string>
    <!-- 个人信息 -->
    <string name="main_personal_about_head">头像</string>
    <string name="main_personal_basic_info">基本信息</string>
    <string name="main_personal_about_name">昵称</string>
    <string name="main_personal_about_telephone">手机</string>
    <string name="main_personal_safety_info">安全问题</string>
    <string name="main_personal_about_sex">性别</string>
    <string name="main_personal_safety_password">密码修改</string>
    <string name="main_personal_modify_password">点击修改</string>
    <string name="main_personal_quit_account">退出当前账号</string>
    <!-- 登录 界面 -->
    <string name="login_title">欢迎登录</string>
    <string name="login_register">新用户注册</string>
    <string name="login_name_phone">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login">登录</string>
    <!-- 注册界面 -->
    <string name="regist_title">新用户注册</string>
    <string name="regist_info">请输入手机号码获取验证码，并填写短信中的验证码进行验证</string>
    <string name="regist_phone">请输入手机号</string>
    <string name="regist_verify_code">验证码</string>
    <string name="regist_get_verify_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="regist_name_title">设置昵称/密码</string>
    <string name="regist_set_name">请输入昵称</string>
    <string name="regist_set_name_info">建议填写你的真实姓名，失主与您联系!此昵称可在个人信息进行修改。</string>
    <string name="regist_set_password">请输入密码</string>
    <string name="regist_set_submit">提交</string>
    <!-- 个人信息修改 -->
    <string name="modify_submit">提交</string>
    <!-- 失物招领界面 -->
    <string name="progress_loading">正在获取数据..</string>
    <string name="list_no_data_lost">暂时还未有失物信息</string>
    <string name="add_title_hint">标题</string>
    <string name="add_telephone_hint">手机</string>
    <string name="add_content_hint">内容</string>
    <string name="add_submit">完成</string>

</resources>