<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relative_personal_about_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_personal_about_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/main_personal_about_head"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_personal_about_head"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/iv_personal_about_head_next"
                    android:src="@drawable/head" />

                <ImageView
                    android:id="@+id/iv_personal_about_head_next"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/next" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/main_personal_basic_info"
                    android:textColor="#6699ff"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="#6699ff" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc" />

            <RelativeLayout
                android:id="@+id/relative_personal_about_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/main_personal_about_name"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_main_personal_about_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/iv_main_personal_about_name_next"
                    android:text="昵称"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_main_personal_about_name_next"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/next" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc" />

            <RelativeLayout
                android:id="@+id/relative_personal_about_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/main_personal_about_telephone"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_personal_about_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/iv_personal_about_telephone_next"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_personal_about_telephone_next"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/next" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc" />

            <RelativeLayout
                android:id="@+id/relative_personal_about_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/main_personal_about_sex"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_about_industry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/iv_main_personal_about_sex"
                    android:text="性别"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_main_personal_about_sex"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/next" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/main_personal_safety_info"
                    android:textColor="#6699ff"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="#6699ff" />

            <RelativeLayout
                android:id="@+id/relative_personal_safety_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/main_personal_safety_password"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_safety_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/iv_main_personal_safety_password"
                    android:text="@string/main_personal_modify_password"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_main_personal_safety_password"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/next" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc" />

            <Button
                android:id="@+id/btn_setting_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_quit_red_bg"
                android:text="@string/main_personal_quit_account"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>